syntax = "proto3";

package com.proto;

option java_multiple_files = true;
option java_package = "com.example.req";

message TestParam {
  string userId = 1;
  int32 id = 2;
}
